# boltz

./: .gitignore  README.md  pyproject.toml
scripts/eval/: aggregate_evals.py  physcialsim_metrics.py  run_evals.py
scripts/process/: ccd.py  mmcif.py
scripts/train/: train.py
src/boltz/: main.py
src/boltz/data/: const.py  mol.py  pad.py  types.py
src/boltz/data/crop/: affinity.py  boltz.py
src/boltz/data/feature/: featurizer.py  featurizerv2.py  symmetry.py
src/boltz/data/filter/dynamic/: max_residues.py
src/boltz/data/module/: inference.py  inferencev2.py  training.py  trainingv2.py
src/boltz/data/msa/: mmseqs2.py
src/boltz/data/parse/: a3m.py  csv.py  fasta.py  mmcif.py  mmcif_with_constraints.py  pdb.py  schema.py
src/boltz/data/sample/: cluster.py  distillation.py  random.py  sampler.py
src/boltz/data/tokenize/: boltz.py  boltz2.py
src/boltz/data/write/: mmcif.py  pdb.py  writer.py
src/boltz/model/layers/: confidence_utils.py  outer_product_mean.py  pair_averaging.py  pairformer.py  relative.py  triangular_mult.py
src/boltz/model/layers/triangular_attention/: primitives.py  utils.py
src/boltz/model/loss/: bfactor.py  confidence.py  confidencev2.py  diffusion.py  diffusionv2.py  distogramv2.py  validation.py
src/boltz/model/models/: boltz1.py  boltz2.py
src/boltz/model/modules/: affinity.py  confidence.py  confidence_utils.py  confidencev2.py  diffusion.py  diffusionv2.py  encoders.py  encodersv2.py  transformers.py  transformersv2.py  trunk.py  trunkv2.py  utils.py
src/boltz/model/optim/: ema.py  scheduler.py
src/boltz/model/potentials/: potentials.py
tests/: profiling.py  test_regression.py
tests/model/layers/: test_outer_product_mean.py  test_triangle_attention.py
