[build-system]
requires = ["setuptools >= 64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "boltz"
requires-python = ">=3.12"
description = "Boltz"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "biopython>=1.84,<2.0",
    "chembl-structure-pipeline>=1.2.2,<2.0.0",
    "click>=8.1,<9.0",
    "cuequivariance_ops_cu13>=0.8,<0.9",
    "cuequivariance_ops_torch_cu13>=0.8,<0.9",
    "cuequivariance_torch>=0.8,<0.9",
    "deepspeed>=0.18,<0.19",
    "dm-tree>=0.1.8,<0.2",
    "einops>=0.8,<0.9",
    "einx>=0.3,<0.4",
    "fairscale>=0.4.13,<0.5",
    "gemmi>=0.6.5,<0.7",
    "hydra-core>=1.3,<1.4",
    "mashumaro>=3.14,<4.0",
    "modelcif>=1.2,<1.3",
    "numba>=0.61,<0.62",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "pytorch-lightning",
    "pyyaml>=6.0,<7.0",
    "rdkit==2024.9.6",
    "scikit-learn>=1.6,<2.0",
    "scipy>=1.13,<2.0",
    "torch~=2.9.1",
    "triton>=3.4.0",
    "wandb>=0.23",
]

[project.scripts]
boltz = "boltz.main:cli"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "debugpy",
    "jupyter",
]
lint = ["mypy", "ruff"]
test = ["pytest", "requests"]

[tool.uv]
add-bounds = "minor"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools_scm]

[tool.ruff]
src = ["src"]
extend-exclude = ["conf.py"]
lint.extend-select = [
    "W6",
    "I",
    "N80",
    "S102",
    "S108",
    "S306",
    "S307",
    "S60",
    "B",
    "A",
    "PT",
    "PTH",
    "PLE",
    "PLW",
    "NPY",
    "RUF",
]
lint.ignore = [
    "E74",
    "F403",
    "F405",
    "N803",
    "N806",
    "S603",
    "S607",
    "B008",
    "B905",
    "PTH123",
    "PLW2901",
    "RUF005",
    "RUF100",  # for upstream compatibility
    "NPY002",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"docs/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]
"scripts/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]
"tests/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "regression",
]

[tool.mypy]
files = ["src/boltz/"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

allow_redefinition = true
local_partial_types = true
disable_error_code = ["import-untyped", "no-redef", "override"]

show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["rdkit.*", "lightning.*", "Bio.*", "networkx.*"]

follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = ["deepspeed.*", "flash_attn.*"]

ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.12"
pythonPlatform = "Linux"

strictParameterNoneValue = false

reportGeneralTypeIssues = "information"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "none"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"
reportPrivateImportUsage = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "warning"
reportInconsistentConstructor = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportInvalidStringEscapeSequence = "error"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "warning"
reportImplicitStringConcatenation = "information"
reportInvalidStubStatement = "warning"
reportIncompleteStub = "warning"
reportUnnecessaryTypeIgnoreComment = "none"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportPossiblyUnboundVariable = "none"

# Covered by mypy
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportReturnType = "none"
reportAny = "none"
reportRedeclaration = "none"
reportImplicitOverride = "none"
reportUnusedCallResult = "none"
reportMissingTypeArgument = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
